Feat/support springboot3.x (#86)
* feat: support springboot3.x

* feat: javax.servlet切换为jakarta.servlet

* fix: upgrade jacoco plugin version to support Java 17 and spring boot upgrade to v3.5.0

* fix: correct interface names in trpc_java_client.yaml - Fix GreeterserviceAPI to GreeterServiceAPI and Greeterservice2API to GreeterService2API

* feat: upgrade dependencies for Spring Boot 3.x support - Add jakarta.annotation-api 2.1.1, httpcore5, httpclient5 dependencies - Upgrade log4j to 2.24.3 and fix dependency management

* remove spring demo httpcore5, httpclient5 dependencies

* feat: delete java version

* feat:Add generic parameter passing functionality to the HTTP protocol of trpc-java

* feat: 2.0.0 snapshot

* feat: upgrade jacoco.agent version

* feat: upgrade test jar version

* feat: fix mockito-inline version

* feat: 改为2.0.1-SNAPSHOT版本

---------

Co-authored-by: wenhsh <wenhsh@126.com>
Co-authored-by: trace267 <464282636@qq.com>